; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_bitstream_filters.c_av_bsf_iterate.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_bitstream_filters.c_av_bsf_iterate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@bitstream_filters = common dso_local global i32** null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @av_bsf_iterate(i8** %0) #0 {
  %2 = alloca i8**, align 8
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  store i8** %0, i8*** %2, align 8
  %5 = load i8**, i8*** %2, align 8
  %6 = load i8*, i8** %5, align 8
  %7 = ptrtoint i8* %6 to i64
  store i64 %7, i64* %3, align 8
  %8 = load i32**, i32*** @bitstream_filters, align 8
  %9 = load i64, i64* %3, align 8
  %10 = getelementptr inbounds i32*, i32** %8, i64 %9
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %4, align 8
  %12 = load i32*, i32** %4, align 8
  %13 = icmp ne i32* %12, null
  br i1 %13, label %14, label %19

14:                                               ; preds = %1
  %15 = load i64, i64* %3, align 8
  %16 = add i64 %15, 1
  %17 = inttoptr i64 %16 to i8*
  %18 = load i8**, i8*** %2, align 8
  store i8* %17, i8** %18, align 8
  br label %19

19:                                               ; preds = %14, %1
  %20 = load i32*, i32** %4, align 8
  ret i32* %20
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
